--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ body{
   position: relative;
   top: -50px;
   border-radius: 50%;
-  width: 100px;
+  width: 80px;
+  height: 80px;
   margin-bottom: -50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
